Closed Bug 420858 Opened 16 years ago Closed 16 years ago

Browser only Regressions in ecma_3/Operators/11.13.1-001.js, js1_5/Regress/regress-252892.js, js1_5/Regress/regress-321757.js

Categories

(Core :: XPConnect, defect, P1)

x86
All
defect

Tracking

()

VERIFIED FIXED
mozilla1.9

People

(Reporter: bc, Assigned: jst)

References

()

Details

(Keywords: regression, testcase)

Attachments

(1 file)

Assignee: nobody → jst
Flags: blocking1.9? → blocking1.9+
Priority: -- → P1
Target Milestone: --- → mozilla1.9
Attachment #307366 - Flags: superreview?(brendan)
Attachment #307366 - Flags: review?(brendan)
Comment on attachment 307366 [details] [diff] [review]
Don't resolve when binding names.

>+  if ((flags & (JSRESOLVE_ASSIGNING)) && (JSOp)*cx->fp->pc != JSOP_BINDNAME &&

It occurs that JSOP_BINDNAME should not have JOF_SET, aka JOF_ASSIGNING (which induces JSRESOLVE_ASSIGNING). But it should not be non-assigning either, an r-value context, since there is no "get" instead of "set" -- instead, there's a "bind" operation. Suggests JOF_BINDING, but that is for the future. For now, an explicit single-op special case is good enough.

/be
Attachment #307366 - Flags: superreview?(brendan)
Attachment #307366 - Flags: superreview+
Attachment #307366 - Flags: review?(brendan)
Attachment #307366 - Flags: review+
Fix checked in. Bob, please reopen or file a separate bug if there's still tests failing.
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
v
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: