Fixing bug 420858. Don't define fast expandos when binding names in JS. r+sr=brendan@mozilla.org